--- a/DU-LMC-Sales-Screen/output.html
+++ b/DU-LMC-Sales-Screen/output.html
@@ -1,7 +1,8 @@
--- https://github.com/EricHamby/DU-LUA-Scripts
--- DU-LMC-Sales-Screen
--- v1.0
+<!-- https://github.com/EricHamby/DU-LUA-Scripts -->
+<!-- DU-LMC-Sales-Screen -->
+<!-- v1.0 -->
 <style>
+
 html {
   height: 100%;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
@@ -98,7 +99,7 @@ html {
 <div id='stars2'></div>
 <div id='stars3'></div>
    <div class="bootstrap" style="font-size:1vh;position:absolute;">
-    <b style="color:#ffaa00;font-size:12vw;">MINING RIG X6</b><br>
+    <b style="color:#ffaa00;font-size:12vw;">MINING RIG X8</b><br>
     <b style="font-size:5vw;">Full Featured</b><br>
 </div>   
 <div class="bootstrap" style="text-align:left;font-size:3.5vh;padding-top:30vh;padding-left:8vh;">
@@ -114,6 +115,12 @@ html {
         10: Auto update Storage stats when near.<br>
         11: Resurrection Node.<br>
         12: Surrogate Pod Station.<br>
+        13: Room for 2 more Mining Units or more storage.**<br>
+        14: Landing Pad with elevator to control screens.<br>
+    <b style="text-align:center;font-size:2vh;">
+       *Can see a working model on top of hill behind building.<br>
+       **If you use with 10 Mining units however only 8 will be supported by OS. This is due to game limitations and cant be changed.
+        </b> 
         </div> 
 
 </body>
